修改后的查重版本

--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -6,24 +6,29 @@
   volume={1},
   number={1},
   pages={29-81},
-  year={1995},
+  year={1995}
 }
 @article{zhong2017seq2sql,
-  title={Seq2SQL: Generating structured queries from natural language using reinforcement learning},
   author={Zhong, Victor and Xiong, Caiming and Socher, Richard},
-  journal={arXiv preprint arXiv:1709.00103},
-  year={2017}
+  title={Seq2SQL: Generating Structured Queries from Natural Language using Reinforcement Learning},
+  journal   = {CoRR},
+  volume    = {abs/1709.00103},
+  year      = {2017}
 }
 @article{yu2010keyword,
-  title={Keyword Search in Databases (Synthesis Lectures on Data Management)},
-  author={Yu, Jeffrey Xu and Qin, Lu and Chang, Lijun and Ozsu, M Tamer},
-  year={2010},
-  publisher={Morgan and Claypool Publishers}
+  title={Keyword Search in Databases},
+  author={Yu, Jeffrey Xu and Qin, Lu and Chang, Lijun},
+  journal={IEEE Data Eng Bull},
+  volume={1},
+  number={1},
+  pages={681-694},
+  year={2010}
 }
+
 @inproceedings{bhalotia2002keyword,
   title={Keyword searching and browsing in databases using BANKS},
   author={Bhalotia, Gaurav and Hulgeri, Arvind and Nakhe, Charuta and Chakrabarti, Soumen and Sudarshan, Shashank},
-  booktitle={Data Engineering, 2002. Proceedings. 18th International Conference on},
+  booktitle={Proceedings of the 18th International Conference on Data Engineering},
   pages={431--440},
   year={2002},
   organization={IEEE}
@@ -31,7 +36,7 @@
 @inproceedings{agrawal2002dbxplorer,
   title={DBXplorer: A system for keyword-based search over relational databases},
   author={Agrawal, Sanjay and Chaudhuri, Surajit and Das, Gautam},
-  booktitle={Data Engineering, 2002. Proceedings. 18th International Conference on},
+  booktitle={Proceedings of the 18th International Conference on Data Engineering},
   pages={5--16},
   year={2002},
   organization={IEEE}
@@ -39,7 +44,7 @@
 @inproceedings{hristidis2002discover,
   title={Discover: Keyword search in relational databases},
   author={Hristidis, Vagelis and Papakonstantinou, Yannis},
-  booktitle={VLDB'02: Proceedings of the 28th International Conference on Very Large Databases},
+  booktitle={Proceedings of the 28th International Conference on Very Large Databases},
   pages={670--681},
   year={2002},
   organization={Elsevier}
@@ -126,16 +131,23 @@
   year={2005},
   organization={ACM}
 }
-@article{de2018generating,
+@inproceedings{de2006generating,
   title={Generating typed dependency parses from phrase structure parses},
   author={De Marneffe, Marie-Catherine and MacCartney, Bill and Manning, Christopher D},
-  year={2018}
+  booktitle={Proceedings of LREC},
+  pages={449-454},
+  volume={6},
+  number={2006},
+  year={2006}
 }
-@article{wu1994verb,
-  title={verb semantics and lexical selection In Proceedings of the 32nd annual meeting of the association for computational linguistics},
-  author={Wu, Z and Palmer, M},
-  journal={New Mexico},
-  year={1994}
+
+@inproceedings{wu1994verb,
+  title={Verbs semantics and lexical selection},
+  author={Wu, Zhibiao and Palmer, Martha},
+  booktitle={Proceedings of the 32nd annual meeting on Association for Computational Linguistics},
+  pages={133--138},
+  year={1994},
+  organization={Association for Computational Linguistics}
 }
 @article{xiao2011efficient,
   title={Efficient similarity joins for near-duplicate detection},
@@ -160,7 +172,7 @@
 @inproceedings{zeng2014breaking,
   title={Breaking out of the mismatch trap},
   author={Zeng, Yong and Bao, Zhifeng and Ling, Tok Wang and Jagadish, HV and Li, Guoliang},
-  booktitle={Data Engineering (ICDE), 2014 IEEE 30th International Conference on},
+  booktitle={IEEE 30th International Conference on Data Engineering (ICDE)},
   pages={940--951},
   year={2014},
   organization={IEEE}
@@ -168,43 +180,50 @@
 @article{goldman2017weakly,
   title={Weakly-supervised Semantic Parsing with Abstract Examples},
   author={Goldman, Omer and Latcinnik, Veronica and Naveh, Udi and Globerson, Amir and Berant, Jonathan},
-  journal={arXiv preprint arXiv:1711.05240},
+  journal={CoRR},
+  volume={abs/1711.05240},
   year={2017}
 }
-@article{dong2016language,
+@inproceedings{dong2016language,
   title={Language to logical form with neural attention},
   author={Dong, Li and Lapata, Mirella},
-  journal={arXiv preprint arXiv:1601.01280},
+  booktitle={Meeting of the Association for Computational Linguistics},
+  pages={33--43},
   year={2016}
 }
 @article{xu2017sqlnet,
   title={Sqlnet: Generating structured queries from natural language without reinforcement learning},
   author={Xu, Xiaojun and Liu, Chang and Song, Dawn},
-  journal={arXiv preprint arXiv:1711.04436},
-  year={2017}
+  journal   = {CoRR},
+  volume    = {abs/1711.04436},
+  year      = {2017}
 }
 @article{yu2018typesql,
   title={TypeSQL: Knowledge-based Type-Aware Neural Text-to-SQL Generation},
   author={Yu, Tao and Li, Zifan and Zhang, Zilin and Zhang, Rui and Radev, Dragomir},
-  journal={arXiv preprint arXiv:1804.09769},
-  year={2018}
+  journal   = {CoRR},
+  volume    = {abs/1804.09769},
+  year      = {2018}
 }
 @article{huang2018natural,
   title={Natural Language to Structured Query Generation via Meta-Learning},
   author={Huang, Po-Sen and Wang, Chenglong and Singh, Rishabh and Yih, Wen-tau and He, Xiaodong},
-  journal={arXiv preprint arXiv:1803.02400},
-  year={2018}
+  journal   = {CoRR},
+  volume    = {abs/1803.02400},
+  year      = {2018}
 }
-@article{wang2018pointing,
+@book{wang2018pointing,
   title={Pointing Out SQL Queries From Text},
   author={Wang, Chenglong and Brockschmidt, Marc and Singh, Rishabh},
-  year={2018}
+  publisher={Technical Report MSR-TR-2017-45},
+  year={2017}
 }
 @article{wang2018execution,
   title={Execution-guided neural program decoding},
   author={Wang, Chenglong and Huang, Po-Sen and Polozov, Alex and Brockschmidt, Marc and Singh, Rishabh},
-  journal={arXiv preprint arXiv:1807.03100},
-  year={2018}
+  journal   = {CoRR},
+  volume    = {abs/1807.03100},
+  year      = {2018}
 }
 @article{rumelhart1986learning,
   title={Learning representations by back-propagating errors},
@@ -233,7 +252,7 @@
 @inproceedings{price1990evaluation,
   title={Evaluation of spoken language systems: The ATIS domain},
   author={Price, Patti J},
-  booktitle={Speech and Natural Language: Proceedings of a Workshop Held at Hidden Valley, Pennsylvania, June 24-27, 1990},
+  booktitle={Speech and Natural Language: Proceedings of a Workshop},
   year={1990}
 }
 @inproceedings{Dahl1994Expanding,
@@ -241,19 +260,21 @@
   author={Dahl, Deborah A. and Bates, Madeleine and Brown, Michael and Fisher, William and Hunicke-Smith, Kate and Pallett, David and Pao, Christine and Rudnicky, Alexander I. and Shriberg, Elizabeth},
   booktitle={The Workshop on Human Language Technology},
   pages={43-48},
-  year={1994},
+  year={1994}
 }
 @inproceedings{Zelle2008Learning,
   title={Learning to parse database queries using inductive logic programming},
   author={Zelle, John M and Mooney, Raymond J},
-  booktitle={Thirteenth National Conference on Artificial Intelligence},
-  year={2008},
+  booktitle={13th National Conference on Artificial Intelligence},
+  year={2008}
 }
-@article{dong2018coarse,
+@inproceedings{dong2018coarse,
   title={Coarse-to-Fine Decoding for Neural Semantic Parsing},
   author={Dong, Li and Lapata, Mirella},
-  journal={arXiv preprint arXiv:1805.04793},
-  year={2018}
+  booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational
+               Linguistics},
+  pages     = {731--742},
+  year      = {2018}
 }
 @inproceedings{pennington2014glove,
   title={Glove: Global vectors for word representation},
@@ -265,8 +286,9 @@
 @article{kingma2014adam,
   title={Adam: A method for stochastic optimization},
   author={Kingma, Diederik P and Ba, Jimmy},
-  journal={arXiv preprint arXiv:1412.6980},
-  year={2014}
+  journal   = {CoRR},
+  volume    = {abs/1412.6980},
+  year      = {2014}
 }
 @inproceedings{yu2018spider,
   title={Spider: A Large-Scale Human-Labeled Dataset for Complex and Cross-Domain Semantic Parsing and Text-to-SQL Task},
@@ -278,8 +300,9 @@
 @article{mikolov2013efficient,
   title={Efficient estimation of word representations in vector space},
   author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
-  journal={arXiv preprint arXiv:1301.3781},
-  year={2013}
+  journal   = {CoRR},
+  volume    = {abs/1301.3781},
+  year      = {2013}
 }
 @inproceedings{kiros2015skip,
   title={Skip-thought vectors},
@@ -309,8 +332,9 @@
 @article{peters2018deep,
   title={Deep contextualized word representations},
   author={Peters, Matthew E and Neumann, Mark and Iyyer, Mohit and Gardner, Matt and Clark, Christopher and Lee, Kenton and Zettlemoyer, Luke},
-  journal={arXiv preprint arXiv:1802.05365},
-  year={2018}
+  journal   = {CoRR},
+  volume    = {abs/1802.05365},
+  year      = {2018}
 }
 @inproceedings{ramachandran2017unsupervised,
   title={Unsupervised Pretraining for Sequence to Sequence Learning},
@@ -322,8 +346,9 @@
 @article{howard2018fine,
   title={Fine-tuned Language Models for Text Classification},
   author={Howard, Jeremy and Ruder, Sebastian},
-  journal={arXiv preprint arXiv:1801.06146},
-  year={2018}
+  journal   = {CoRR},
+  volume    = {abs/1801.06146},
+  year      = {2018}
 }
 @inproceedings{mccann2017learned,
   title={Learned in translation: Contextualized word vectors},
@@ -332,11 +357,13 @@
   pages={6294--6305},
   year={2017}
 }
-@article{min2017question,
+@inproceedings{min2017question,
   title={Question answering through transfer learning from large fine-grained supervision data},
   author={Min, Sewon and Seo, Minjoon and Hajishirzi, Hannaneh},
-  journal={arXiv preprint arXiv:1702.02171},
-  year={2017}
+  booktitle = {Proceedings of the 55th Annual Meeting of the Association for Computational
+               Linguistics},
+  pages     = {510--517},
+  year      = {2017}
 }
 @inproceedings{zoph2016transfer,
   title={Transfer Learning for Low-Resource Neural Machine Translation},
@@ -364,14 +391,16 @@
 @article{luong2015multi,
   title={Multi-task sequence to sequence learning},
   author={Luong, Minh-Thang and Le, Quoc V and Sutskever, Ilya and Vinyals, Oriol and Kaiser, Lukasz},
-  journal={arXiv preprint arXiv:1511.06114},
-  year={2015}
+  journal   = {CoRR},
+  volume    = {abs/1511.06114},
+  year      = {2015}
 }
 @article{kaiser2017one,
   title={One model to learn them all},
   author={Kaiser, Lukasz and Gomez, Aidan N and Shazeer, Noam and Vaswani, Ashish and Parmar, Niki and Jones, Llion and Uszkoreit, Jakob},
-  journal={arXiv preprint arXiv:1706.05137},
-  year={2017}
+  journal   = {CoRR},
+  volume    = {abs/1706.05137},
+  year      = {2017}
 }
 @inproceedings{xiong2016dynamic,
   title={Dynamic memory networks for visual and textual question answering},
@@ -405,20 +434,24 @@
 @article{wang2018glue,
   title={GLUE: A Multi-Task Benchmark and Analysis Platform for Natural Language Understanding},
   author={Wang, Alex and Singh, Amapreet and Michael, Julian and Hill, Felix and Levy, Omer and Bowman, Samuel R},
-  journal={arXiv preprint arXiv:1804.07461},
-  year={2018}
+  journal   = {CoRR},
+  volume    = {abs/1804.07461},
+  year      = {2018}
 }
-@article{poliak2018evaluation,
+@inproceedings{poliak2018evaluation,
   title={On the Evaluation of Semantic Phenomena in Neural Machine Translation Using Natural Language Inference},
   author={Poliak, Adam and Belinkov, Yonatan and Glass, James and Van Durme, Benjamin},
-  journal={arXiv preprint arXiv:1804.09779},
-  year={2018}
+  booktitle = {Proceedings of the 2018 Conference of the North American Chapter of
+               the Association for Computational Linguistics},
+  pages     = {513--523},
+  year      = {2018}
 }
 @article{poliak2018towards,
   title={Towards a Unified Natural Language Inference Framework to Evaluate Sentence Representations},
   author={Poliak, Adam and Haldar, Aparajita and Rudinger, Rachel and Hu, J Edward and Pavlick, Ellie and White, Aaron Steven and Van Durme, Benjamin},
-  journal={arXiv preprint arXiv:1804.08207},
-  year={2018}
+  journal   = {CoRR},
+  volume    = {abs/1804.08207},
+  year      = {2018}
 }
 @inproceedings{vinyals2015pointer,
   title={Pointer networks},
@@ -450,52 +483,60 @@
 @inproceedings{Nair2010Rectified,
   title={Rectified Linear Units Improve Restricted Boltzmann Machines},
   author={Nair, Vinod and Hinton, Geoffrey E.},
-  booktitle={International Conference on International Conference on Machine Learning},
+  booktitle={International Conference on Machine Learning},
   pages={807-814},
-  year={2010},
+  year={2010}
 }
 @article{Ba2016Layer,
   title={Layer Normalization},
   author={Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E.},
-  year={2016},
+  journal   = {CoRR},
+  volume    = {abs/1607.06450},
+  year      = {2016}
 }
-@article{See2017Get,
+@inproceedings{See2017Get,
   title={Get To The Point: Summarization with Pointer-Generator Networks},
   author={See, Abigail and Liu, Peter J. and Manning, Christopher D.},
-  pages={1073-1083},
-  year={2017},
+  booktitle = {Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics},
+  pages     = {1073--1083},
+  year      = {2017}
 }
 @article{Bengio2009Curriculum,
   title={Curriculum learning},
   author={Bengio, Yoshua and Louradour, Jérôme and Collobert, Ronan and Weston, Jason},
-  journal={Proc.int.conf.on Machine Learning},
+  journal={Machine Learning},
   volume={60},
   number={60},
   pages={6},
-  year={2009},
+  year={2009}
 }
 @inproceedings{Hovy2006OntoNotes,
   title={OntoNotes: the 90% solution},
   author={Hovy, Eduard and Marcus, Mitchell and Palmer, Martha and Ramshaw, Lance and Weischedel, Ralph},
   booktitle={Human Language Technology Conference of the North American Chapter of the Association of Computational Linguistics},
-  year={2006},
+  pages     = {11--12},
+  year      = {2009}
 }
-@article{Bowman2015A,
+@inproceedings{Bowman2015A,
   title={A large annotated corpus for learning natural language inference},
   author={Bowman, Samuel R. and Angeli, Gabor and Potts, Christopher and Manning, Christopher D.},
-  journal={Computer Science},
-  year={2015},
+  booktitle={Proceedings of the 2015 Conference on Empirical Methods in Natural Language Processing},
+  pages={632--642},
+  year={2015}
 }
 @article{Kim2018Semantic,
   title={Semantic Sentence Matching with Densely-connected Recurrent and Co-attentive Information},
   author={Kim, Seonhoon and Hong, Jin Hyuk and Kang, Inho and Kwak, Nojun},
-  year={2018},
+  journal   = {CoRR},
+  volume    = {abs/1805.11360},
+  year      = {2018}
 }
 @inproceedings{Kotzias2015From,
   title={From Group to Individual Labels Using Deep Features},
   author={Kotzias, Dimitrios and Denil, Misha and Freitas, Nando De and Smyth, Padhraic},
   booktitle={Acm Sigkdd International Conference on Knowledge Discovery & Data Mining},
-  year={2015},
+  pages     = {597--606},
+  year      = {2015}
 }
 @article{woods1972lunar,
   title={The lunar sciences natural language information system},
@@ -506,7 +547,7 @@
 }
 @article{wallace1984communicating,
   title={Communicating with Databases in Natural Languages},
-  author={Wallace, Mark},
+  author={Wallace and Mark},
   year={1984},
   publisher={CUMINCAD}
 }
@@ -514,23 +555,26 @@
   title={The core language engine},
   author={Alshawi, Hiyan},
   year={1992},
-  publisher={mit Press}
+  publisher={Mit Press}
 }
 @article{wang2016machine,
   title={Machine comprehension using match-lstm and answer pointer},
   author={Wang, Shuohang and Jiang, Jing},
-  journal={arXiv preprint arXiv:1608.07905},
-  year={2016}
+  journal   = {CoRR},
+  volume    = {abs/1608.07905},
+  year      = {2016}
 }
 @article{seo2016bidirectional,
   title={Bidirectional attention flow for machine comprehension},
   author={Seo, Minjoon and Kembhavi, Aniruddha and Farhadi, Ali and Hajishirzi, Hannaneh},
-  journal={arXiv preprint arXiv:1611.01603},
-  year={2016}
+  journal   = {CoRR},
+  volume    = {abs/1611.01603},
+  year      = {2016}
 }
 @article{xiong2017dcn+,
   title={Dcn+: Mixed objective and deep residual coattention for question answering},
   author={Xiong, Caiming and Zhong, Victor and Socher, Richard},
-  journal={arXiv preprint arXiv:1711.00106},
-  year={2017}
+  journal   = {CoRR},
+  volume    = {abs/1711.00106},
+  year      = {2017}
 }
