--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -8,43 +8,28 @@
 
 \begin{abstract}
 
-% 上海交通大学是我国历史最悠久的高等学府之一，是教育部直属、教育部与上海市共建的全国重点大学，是国家 “七五”、“八五”重点建设和“211工程”、“985工程”的首批建设高校。经过115年的不懈努力，上海交通大学已经成为一所“综合性、研究型、国际化”的国内一流、国际知名大学，并正在向世界一流大学稳步迈进。 
-
-% 十九世纪末，甲午战败，民族危难。中国近代著名实业家、教育家盛宣怀和一批有识之士秉持“自强首在储才，储才必先兴学”的信念，于1896年在上海创办了交通大学的前身——南洋公学。建校伊始，学校即坚持“求实学，务实业”的宗旨，以培养“第一等人才”为教育目标，精勤进取，笃行不倦，在二十世纪二三十年代已成为国内著名的高等学府，被誉为“东方MIT”。抗战时期，广大师生历尽艰难，移转租界，内迁重庆，坚持办学，不少学生投笔从戎，浴血沙场。解放前夕，广大师生积极投身民主革命，学校被誉为“民主堡垒”。
-
-% 新中国成立初期，为配合国家经济建设的需要，学校调整出相当一部分优势专业、师资设备，支持国内兄弟院校的发展。五十年代中期，学校又响应国家建设大西北的号召，根据国务院决定，部分迁往西安，分为交通大学上海部分和西安部分。1959年3月两部分同时被列为全国重点大学，7月经国务院批准分别独立建制，交通大学上海部分启用“上海交通大学”校名。历经西迁、两地办学、独立办学等变迁，为构建新中国的高等教育体系，促进社会主义建设做出了重要贡献。六七十年代，学校先后归属国防科工委和六机部领导，积极投身国防人才培养和国防科研，为“两弹一星”和国防现代化做出了巨大贡献。
-
-% 改革开放以来，学校以“敢为天下先”的精神，大胆推进改革：率先组成教授代表团访问美国，率先实行校内管理体制改革，率先接受海外友人巨资捐赠等，有力地推动了学校的教学科研改革。1984年，邓小平同志亲切接见了学校领导和师生代表，对学校的各项改革给予了充分肯定。在国家和上海市的大力支持下，学校以“上水平、创一流”为目标，以学科建设为龙头，先后恢复和兴建了理科、管理学科、生命学科、法学和人文学科等。1999年，上海农学院并入；2005年，与上海第二医科大学强强合并。至此，学校完成了综合性大学的学科布局。近年来，通过国家“985工程”和“211工程”的建设，学校高层次人才日渐汇聚，科研实力快速提升，实现了向研究型大学的转变。与此同时，学校通过与美国密西根大学等世界一流大学的合作办学，实施国际化战略取得重要突破。1985年开始闵行校区建设，历经20多年，已基本建设成设施完善，环境优美的现代化大学校园，并已完成了办学重心向闵行校区的转移。学校现有徐汇、闵行、法华、七宝和重庆南路（卢湾）5个校区，总占地面积4840亩。通过一系列的改革和建设，学校的各项办学指标大幅度上升，实现了跨越式发展，整体实力显著增强，为建设世界一流大学奠定了坚实的基础。
-
-% 交通大学始终把人才培养作为办学的根本任务。一百多年来，学校为国家和社会培养了20余万各类优秀人才，包括一批杰出的政治家、科学家、社会活动家、实业家、工程技术专家和医学专家，如江泽民、陆定一、丁关根、汪道涵、钱学森、吴文俊、徐光宪、张光斗、黄炎培、邵力子、李叔同、蔡锷、邹韬奋、陈敏章、王振义、陈竺等。在中国科学院、中国工程院院士中，有200余位交大校友；在国家23位“两弹一星”功臣中，有6位交大校友；在18位国家最高科学技术奖获得者中，有3位来自交大。交大创造了中国近现代发展史上的诸多“第一”：中国最早的内燃机、最早的电机、最早的中文打字机等；新中国第一艘万吨轮、第一艘核潜艇、第一艘气垫船、第一艘水翼艇、自主设计的第一代战斗机、第一枚运载火箭、第一颗人造卫星、第一例心脏二尖瓣分离术、第一例成功移植同种原位肝手术、第一例成功抢救大面积烧伤病人手术等，都凝聚着交大师生和校友的心血智慧。改革开放以来，一批年轻的校友已在世界各地、各行各业崭露头角。
-
-% 截至2011年12月31日，学校共有24个学院/直属系（另有继续教育学院、技术学院和国际教育学院），19个直属单位，12家附属医院，全日制本科生16802人、研究生24495人（其中博士研究生5059人）；有专任教师2979名，其中教授835名；中国科学院院士15名，中国工程院院士20名，中组部“千人计划”49名，“长江学者”95名，国家杰出青年基金获得者80名，国家重点基础研究发展计划（973计划）首席科学家24名，国家重大科学研究计划首席科学家9名，国家基金委创新研究群体6个，教育部创新团队17个。
-
-% 学校现有本科专业68个，涵盖经济学、法学、文学、理学、工学、农学、医学、管理学和艺术等九个学科门类；拥有国家级教学及人才培养基地7个，国家级校外实践教育基地5个，国家级实验教学示范中心5个，上海市实验教学示范中心4个；有国家级教学团队8个，上海市教学团队15个；有国家级教学名师7人，上海市教学名师35人；有国家级精品课程46门，上海市精品课程117门；有国家级双语示范课程7门；2001、2005和2009年，作为第一完成单位，共获得国家级教学成果37项、上海市教学成果157项。
-
-随着IT和互联网技术地不断发展，医疗、教育、金融等各个行业都在使用关系型数据库作为数据存储。
-技术人员在软件开发过程中会频繁地使用SQL语句用于数据的增删改查，业务人员也经常使用SQL语句进行报表与在线分析（OLAP）的定制，从数据库中获取所需信息。
-但是，SQL语言本质上是一种编程语言。使用者首先需要具有一定的数据库和SQL语言相关专业知识，并且需要在熟悉数据库模式的前提下，才能熟练的进行数据库的管理。
-如何降低SQL语言的学习成本、如何更快更好地生成SQL查询语句、如何使用更自然的方式生成SQL语言等问题一直都是学术界和工业界想要解决的问题。
-
-为了解决上述问题，本文对SQL查询语句的自动生成技术进行研究，分析了该领域的现有研究成果，
-从交互式自然语言接口生成SQL查询语句和自然语言生成SQL查询语句两种方式展开研究。
+随着IT技术地不断发展，医疗、教育、金融等各个行业都在使用数据库进行数据存储。
+软件工程师在软件开发过程中会频繁地使用SQL语句用于数据的增删改查，业务人员也经常使用SQL语句进行报表与在线分析（OLAP）的定制，从数据库中获取所需信息。
+但是，SQL语言本质上是一种编程语言，使用者需要具有一定的数据库和SQL语言相关专业知识，并且需要在熟悉数据库模式的前提下，才能熟练进行SQL语句的编写。
+如何降低SQL语言的学习成本？如何更快更好地生成SQL查询语句？如何使用更自然的方式生成SQL语言？
+针对这些问题，本文研究面向最终用户的SQL查询语句的自动生成技术，提出了从交互式自然语言接口生成SQL查询语句(INL2SQL)和从自然语言生成SQL查询语句(NL2SQL)的技术与方法。
 
 本文主要的贡献和创新点包括：
 
 1)研究提出了一种基于映射的INL2SQL生成方法。
-该方法使用依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译模块对用户输入的查询进行意图的解析并将其映射到SQL查询语句上。
-同时，通过交互式对话器和用户接口模块对意图解析和映射进行补充和重构，解决意图缺失和歧义问题。
+本方法使用依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译模块对用户输入的查询进行意图的解析，并将其映射到SQL查询语句上。
+通过交互式对话器和用户接口模块对意图的解析与映射进行补充和重构。
+本文采用Classicmodels和MAS数据集进行了实验，实验表明，模型在有交互的情况下在简单、中等、困难的场景下的表现为100\%、80\%、35\%和100\%、93\%、71\%的准确性，有效解决了意图缺失和歧义等问题。
+
 
 % 减少了自然语言解析中出现的歧义问题和错误情况，提升了准确性。
 
 
 2)研究提出了一种基于深度强化学习的NL2SQL生成方法。
-本文提出将系统分为离线训练阶段和在线生成阶段，使用强化学习将SQL语句的执行结果用于神经网络模型的强化。
-提出了由编码器和解码器构成的神经网络模型结构。
-将网络模型的学习目标转换为策略的优化问题并对给出了模型的状态和动作的定义。
-提出了解决SQL查询语句中的过滤条件的顺序问题、隐式列名问题的解决方法。
-% 使用WikiSQL、ATIS、Spider数据集进行实验与对比。
+本方法采用由编码器和解码器构成，结合自注意力机制的神经网络模型结构，使用强化学习将SQL语句的执行结果用于神经网络模型的强化。
+它将网络模型的学习目标转换为策略的优化问题，并对给出了模型的状态和动作的定义。
+为了解决SQL查询语句中的过滤条件的顺序问题和隐式列名问题，本方法提出了非确定性预言和$ANYCOL$状态的解决办法。
+本文进行了一系列实验，实验表明，本文方法在WikiSQL数据集上表现一流，在ATIS数据集的验证集上的数据库执行准确率为89.2\%，在Spider数据集的验证集和测试集上表现超过同类方法，其逻辑形式准确率和数据库执行准确率分别达到23.2\%和24.1\%。
 
 
 % 本文提出了的解决方案。
@@ -59,16 +44,11 @@
 % 提出了一种基于深度强化学习的NL2SQL的方法。
 
 3)研究提出了一种基于多任务学习的NL2SQL生成方法。
-该方法通过设计TCR模板，将中文自然语言转换为英文自然语言任务和英文自然语言转换为SQL查询语句任务进行统一。
-提出由编码器和解码器构成的多任务网络模型，通过单独编码、对准、对偶协同注意力、压缩、自注意力和最终编码阶段进行编码，
-通过结果表示、自注意力、获得中间状态、任务与内容注意力、获得任务与内容状态、多指针生成阶段进行解码，
-并运用不同的优化策略进行多任务的学习。
-
-本文在多个数据集上进行了实验。
-实验结果证明，基于映射的INL2SQL生成方法减少了自然语言解析中出现的歧义问题和错误情况，提升了准确性。
-基于深度强化学习的NL2SQL生成方法在WikiSQL数据集上的表现一流，在Spider数据集的验证集和测试集上的表现超过同类方法，达到23.2\%和24.1\%。
-基于多任务学习的NL2SQL生成方法在WikiSQL数据集上达到72.4\%和80.4\%的最高水平，证明了方法的有效性和准确性。
-在引入更多的任务进行学习时，该方法达到了571.7的总分，证明了该方法能够有效解决中文自然语言生成SQL查询语句问题，同时还具有很好的通用性和可拓展性。
+为了进一步提高NL2SQL生成的准确性以及解决中文自然语言生成SQL查询语句的问题，本文提出了一种基于多任务学习的NL2SQL生成的模型与方法。
+本方法使用TCR模板把多项学习任务进行统一，再使用由编码器和解码器构成的多任务学习网络模型进行同时学习，采用对偶协同注意力机制实现任务间的迁移学习。
+在实验过程中，本文采用了完全联合学习、反递进学习等不同的优化策略进行训练。
+本方法在WikiSQL数据集上的逻辑形式准确率和数据库执行准确率达到78.7\%和86.1\%的最高水平，验证了方法的有效性。
+在引入更多的任务进行学习时，对各项任务指标进行加和得到607.7的总分，表明了本方法能够有效解决中文自然语言生成SQL查询语句问题，同时还具有良好的通用性和可拓展性。
 
 
 \end{abstract}
@@ -86,6 +66,33 @@
 % SJTU boasts a large number of famous scientists and professors, including 35 academics of the Academy of Sciences and Academy of Engineering, 95 accredited professors and chair professors of the "Cheung Kong Scholars Program" and more than 2,000 professors and associate professors.
 
 % Its total enrollment of students amounts to 35,929, of which 1,564 are international students. There are 16,802 undergraduates, and 17,563 masters and Ph.D. candidates. After more than a century of operation, Jiao Tong University has inherited the old tradition of "high starting points, solid foundation, strict requirements and extensive practice." Students from SJTU have won top prizes in various competitions, including ACM International Collegiate Programming Contest, International Mathematical Contest in Modeling and Electronics Design Contests. Famous alumni include Jiang Zemin, Lu Dingyi, Ding Guangen, Wang Daohan, Qian Xuesen, Wu Wenjun, Zou Taofen, Mao Yisheng, Cai Er, Huang Yanpei, Shao Lizi, Wang An and many more. More than 200 of the academics of the Chinese Academy of Sciences and Chinese Academy of Engineering are alumni of Jiao Tong University.
-write
+
+With the fast development of IT technology, many mission-critical applications in healthcare, education, finance store their information in relational database.
+Software engineers use SQL statements to insert, delete, update and select data frequently during their software development, and business people often use it to make reports and online analysis(OLAP) in the same way.
+Although expressive and powerful, the SQL language is essentially a programming language, which requires users to be skilled in programming, expertised in SQL language grammar and familiared with the database schema.
+Therefore, how to reduce the learning cost of SQL language, how to generate SQL queries faster and better, and how to generate the SQL query statement by a more natural way become the problems that we attempt to tackle.
+This paper studies the automatic generation of end-user-oriented SQL query statement and puts forward the technologies and methods of generating SQL query statements from interactive natural language interface(INL2SQL) and natural language(NL2SQL).
+
+The main contributions and innovations of this paper include:
+
+1)The paper proposes a INL2SQL(Interactive Nature Language to SQL Query Statement) method based on mapping.
+The method utilizes the modules of dependency parse tree generation, parse tree node mapping, parse tree optimization and reconstruction, query tree translation to analyze the intention of users' queries and map it to SQL query statements.
+Meanwhile, through interactive dialog and user interface module, the intention can be reconstructed and fulfilled.
+Experiments on Classicmodels and MAS datasets show that the accuracy of the interactive model is 100\%, 80\%, 35\% and 100\%, 93\% and 71\% in simple, medium and hard scenarios, which solves the problems of intent missing and ambiguity effectively.
+
+2)The paper proposes a NL2SQL(Nature Language to SQL Query Statement) method based on deep reinforcement learning.
+A new neural network model structure composed of encoder and decoder, combined with self-attention mechanism has been designed and adopted in this method, which also utilizes reinforcement learning to enhance the model by the execution result of SQL statements.
+In addition, the learning objective of the network model is transformed into the optimization problem of strategies, thus this papaer definites the states and actions.
+In order to solve the order problem of filtering conditions and implicit column problem, this method also proposes the solution with non-deterministic oracle prediction and ANYCOL state.
+The experiment results show that the method is first-class on WikiSQL dataset, the accuracy of database execution on ATIS verification dataset is 89.2\%, the logical form and database execution accuracy on verification and test datasets of Spider are 23.2\% and 24.1\% respectively, which outperforms the existing approaches.
+
+3)The paper proposes a NL2SQL method based on multitask learning.
+In order to further improve the accuracy of NL2SQL generation and solve the problem of generating SQL queries with Chinese natural language, 
+the method first unify different tasks by TCR template and use multi-task network model, which composed of encoder and decoder, and dual cooperative attention mechanism to learn simultaneously.
+Moreover, different optimization strategies, such as fully joint and anti-curriculum, are adopted during training.
+Finally, the logical form and database execution accuracy of this method are 78.7\% and 86.1\% on WikiSQL datasets, which reaches the highest levels and verifies the effectiveness.
+The total score is 607.7 by learning more tasks, which shows that the method can solve the problem of generating SQL query statements with Chinese natural language, and meanwhile has good generality and extensibility.
+
+
 \end{englishabstract}
 
