--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -22,9 +22,9 @@
 
 本文提出了基于映射的交互式自然语言接口生成SQL语句的模型与方法，其核心思想是结合自然语言解析技术，使用人机交互的方式指导解析过程，
 通过依赖解析树生成、解析树节点映射、解析树优化重构、查询树翻译模块对用户输入的查询进行意图的解析并映射到SQL查询语句上。
-从Classicmodels和MAS数据集上的实验结果来看，模型在有交互的情况下在简单、中等、困难的场景下的表现为100\%、80\%、35\%和100\%、93\%、71\%。
+从Classicmodels和MAS数据集上的实验结果来看，模型在有交互的情况下在简单、中等、困难的场景下的表现为100\%、80\%、35\%和100\%、93\%、71\%的准确性。
 通过交互式对话器和用户接口模块对意图解析和映射进行补充和重构，减少了自然语言解析中出现的歧义问题和错误情况，提升了SQL查询语句生成的有效性。
-%done 把实验结论写一下，用数字说话。
+
 
 \textbf{2)基于深度强化学习的英文自然语言生成SQL查询语句的方法}
 
@@ -34,20 +34,19 @@
 本方法的网络模型，即增强解析器模型，由编码器和解码器构成，并结合了自注意力机制。
 通过引入强化学习技术，本方法将增强解析器学习的目标转换为策略的优化问题并对给出了解析器的状态和动作的定义。
 为了解决SQL查询语句中的过滤条件的顺序问题以及隐式列名的问题，还提出了非确定性预言和$ANYCOL$状态的解决办法。
-实验表明，与目前NL2SQL的现有方法相比，本方法在WikiSQL数据集上的表现一流，并且在Spider数据集的验证集和测试集上的表现超过同类方法，达到23.2\%和24.1\%。
-%done 把实验结论写一下，用数字说话。
+实验表明，与目前NL2SQL的现有方法相比，本方法在WikiSQL数据集上的表现一流，并且在Spider数据集的验证集和测试集上的表现超过同类方法，其逻辑形式准确率达到23.2\%和24.1\%。
+
 
 \textbf{3)中文自然语言生成SQL查询语句的方法}
 
 为了进一步提高NL2SQL生成的准确性以及解决中文自然语言生成SQL查询语句的问题，本文提出了一种基于多任务学习的NL2SQL生成的模型与方法。
 本方法使用TCR模板把中文自然语言转换为英文自然语言任务和英文自然语言转换为SQL查询语句任务进行统一。
 再使用由编码器和解码器构成的多任务网络模型进行多任务学习。
-其中，编码过程包含单独编码、对准、对偶协同注意力、压缩、自注意力和最终编码等阶段；
-解码过程包含结果表示、自注意力、获得中间状态、任务与内容注意力、获得任务与内容状态、多指针生成等阶段。
-本文进行了多任务学习实验和优化策略实验，在WikiSQL数据集上达到72.4\%和80.4\%的最高水平，并且在引入更多的任务进行学习时达到了607.7的总分。
+其中，编码过程包含单独编码、对准、对偶协同注意力、压缩、自注意力和最终编码阶段；
+解码过程包含自注意力、获得中间状态、任务与内容注意力、多指针生成阶段。
+本文进行了多任务学习实验和优化策略实验，在WikiSQL数据集上的逻辑形式准确率和数据库执行准确率达到78.7\%和86.1\%的最高水平，并且在引入更多的任务进行学习时达到了607.7的总分。
 实验表明，本方法不仅能够提升英文自然语言生成SQL查询语句任务的准确性，还能够很好地完成中文自然语言生成SQL语言任务，同时还具有很好的可拓展性。
 
-%done 上述实验结论应用数字说话。
 
 \section{展望}
 
